@@ -5,6 +5,7 @@
   * remove Python level methods: encode, decode, iterdecode (in favor of
     having these implemented on the C-level along with check_codedict)
   * fix self tests for Python 2.5 and 2.6
+  * add code to generate .dot file of Huffman tree to examples
 
 
 2019-04-22   0.9.0:
